# PCSCproject

./: .gitignore  CMakeLists.txt  README.md  README.txt  main.cpp
Data_Fitting/: CMakeLists.txt  LeastSquares.cpp  LeastSquares.h
Google_tests/: CMakeLists.txt  DataFittingTest.cpp  InputTest.cpp  OperatingMatricesTest.cpp  OperatingVectorsTest.cpp  PolynomialApproximationTest.cpp  TestSuite.cpp
Google_tests/Test_Files/: testInputClamped.txt  testfalseinputtxt.txt  testinputcsv.csv  testinputtxt.txt
Input/InputCreator/: CMakeLists.txt  InputCreator.cpp  InputCreator.h
Input/InputReader/: CMakeLists.txt  InputReader.cpp
Input/InputReader/InputReaderCsv/: InputReaderCsv.h
Operations/: CMakeLists.txt  OperatingMatrices.cpp  OperatingMatrices.h  OperatingVectors.cpp  OperatingVectors.h
Test_Suites/: CMakeLists.txt  TestSuite.h
src/: CMakeLists.txt
src/Data_Fitting/: CMakeLists.txt  LeastSquares.cpp  LeastSquares.h
src/Data_approximation/: CMakeLists.txt  PolynomialApproximation.cpp  PolynomialApproximation.h  PolynomialApproximationTest.cpp  PolynomialApproximationTest.h  Polynomial_approximation.cpp  Polynomial_approximation.h
src/Input/: CMakeLists.txt  Input.cpp  Input.h
src/Input/InputCreator/: CMakeLists.txt  InputCreator.cpp  InputCreator.h
src/Input/InputReader/: CMakeLists.txt  InputReader.cpp  InputReader.h
src/Input/InputReader/InputReaderCsv/: InputReaderCsv.cpp
src/Operations/: CMakeLists.txt  OperatingMatrices.cpp  OperatingMatrices.h  OperatingVectors.cpp  OperatingVectors.h
src/Output/: CMakeLists.txt  Output.cpp  Output.h
src/PythonFiles/: Data_Fitting_with_degree_2.py
src/Run/: CMakeLists.txt  Run.cpp  Run.h  RunParamReader.cpp  RunParamReader.h
src/Test_Suites/: CMakeLists.txt  TestSuite.cpp  TestSuite.h
src/Test_Suites/Test_Files/: Test_Files - Raccourci.lnk
